--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,6 +28,10 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.google.firebase:firebase-ads:10.2.6'
+    compile 'com.google.firebase:firebase-config:10.2.6'
     testCompile 'junit:junit:4.12'
+
 }
+
+
 apply plugin: 'com.google.gms.google-services'
