--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-
     package="com.tips.tips_pokemon_pro">
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"></uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"></uses-permission>
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
     <application
         android:allowBackup="true"
@@ -14,18 +14,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".tips_pokemon_pro">
+        <activity android:name=".tips_pokemon_pro2" />
+        <activity android:name=".tips_pokemon_pro3" />
+        <activity android:name=".tips_pokemon_pro4" />
+        <activity android:name=".tips_pokemon_pro5" />
+        <activity android:name=".tips_pokemon_pro6" />
+        <activity android:name=".tips_pokemon_pro1">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".tips_pokemon_pro2" />
-        <activity android:name=".tips_pokemon_pro3" />
-        <activity android:name=".tips_pokemon_pro4" />
-        <activity android:name=".tips_pokemon_pro5" />
-        <activity android:name=".tips_pokemon_pro6"></activity>
     </application>
 
 </manifest>
