--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "25.0.3"
     defaultConfig {
-        applicationId "com.tips.tips_pokemon_pro"
+        applicationId "com.tips.ultramannexus"
         minSdkVersion 14
         targetSdkVersion 25
         versionCode 1
@@ -26,12 +26,14 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
 
+
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
-    compile 'com.google.firebase:firebase-ads:10.2.6'
-    compile 'com.google.firebase:firebase-config:10.2.6'
+    compile 'com.google.android.gms:play-services-ads:11.0.2'
+    compile 'com.google.firebase:firebase-database:11.0.2'
     testCompile 'junit:junit:4.12'
 }
+
 
 
 
